// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Player/Player.tools.svelte: Empty 1`] = `
<span>
  <div
    class="root svelte-hd6mn4"
  >
    <audio
      autoplay=""
      class="svelte-hd6mn4"
      crossorigin="anonymous"
      data-testid="audio"
    />
    <div
      class="content svelte-hd6mn4"
    >
      <span
        class="current svelte-hd6mn4"
      />
       
      <div
        class="player svelte-hd6mn4"
      >
        <span
          class="controls svelte-hd6mn4"
        >
          
           
          <span
            class="svelte-15hzj0h"
          >
            <button
              class="iconOnly noBorder svelte-xh4kfu"
            >
              <i
                class="material-icons svelte-xh4kfu"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-15hzj0h"
          >
            <button
              class="iconOnly noBorder svelte-xh4kfu"
            >
              <i
                class="material-icons svelte-xh4kfu"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
        </span>
         
        <div
          class="svelte-1rmg1dn"
        >
          <span
            class="svelte-1rmg1dn"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-gn1r9z"
          >
            <input
              class="w-full svelte-gn1r9z"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-gn1r9z"
            >
              <span
                class="progress svelte-gn1r9z"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-1rmg1dn"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-hd6mn4"
      >
        <div
          class="svelte-9pjqje"
        >
          <span
            class="volume-slider svelte-9pjqje"
          >
            <div
              class="wrapper w-full svelte-gn1r9z"
            >
              <input
                class="w-full svelte-gn1r9z"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-gn1r9z"
              >
                <span
                  class="progress svelte-gn1r9z"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</span>
`;

exports[`Toolshot components/Player/Player.tools.svelte: With track list 1`] = `
<span>
  <div
    class="root svelte-hd6mn4"
  >
    <audio
      autoplay=""
      class="svelte-hd6mn4"
      crossorigin="anonymous"
      data-testid="audio"
      src="./no-duration.mp3"
    />
    <div
      class="content svelte-hd6mn4"
    >
      <span
        class="current svelte-hd6mn4"
      >
        <div
          class="undefined root svelte-8oy723"
        >
          <a
            class="svelte-8oy723"
            href="#/album/1"
          >
            <img
              alt="./# Films/cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1u4ypdz"
              height="256"
              loading="lazy"
              src="./%23 Films/cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-8oy723"
          >
            <span
              class="title svelte-8oy723"
            >
              file 1
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Someone
              </a>
            </span>
          </div>
           
           
        </div>
      </span>
       
      <div
        class="player svelte-hd6mn4"
      >
        <span
          class="controls svelte-hd6mn4"
        >
          <span>
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1v2cnbz"
            >
              <button
                class="iconOnly noBorder svelte-xh4kfu"
              >
                <i
                  class="material-icons svelte-xh4kfu"
                >
                  library_add
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </span>
          
           
          <span
            class="svelte-15hzj0h"
          >
            <button
              class="iconOnly noBorder svelte-xh4kfu"
            >
              <i
                class="material-icons svelte-xh4kfu"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-15hzj0h"
          >
            <button
              class="iconOnly noBorder svelte-xh4kfu"
            >
              <i
                class="material-icons svelte-xh4kfu"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="invisible iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              favorite_border
            </i>
             
             
             
          </button>
        </span>
         
        <div
          class="svelte-1rmg1dn"
        >
          <span
            class="svelte-1rmg1dn"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-gn1r9z"
          >
            <input
              class="w-full svelte-gn1r9z"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-gn1r9z"
            >
              <span
                class="progress svelte-gn1r9z"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-1rmg1dn"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-hd6mn4"
      >
        <div
          class="svelte-9pjqje"
        >
          <span
            class="volume-slider svelte-9pjqje"
          >
            <div
              class="wrapper w-full svelte-gn1r9z"
            >
              <input
                class="w-full svelte-gn1r9z"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-gn1r9z"
              >
                <span
                  class="progress svelte-gn1r9z"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-xh4kfu"
          >
            <i
              class="material-icons svelte-xh4kfu"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</span>
`;
